alexander-pod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ns-13
  name: alexander-app
spec:
  replicas: 5
  selector:
    matchLabels:
      app: alexander-app
  template:
    metadata:
      labels:
        app: alexander-app
    spec:
      containers:
      - name: alexander-app
        image: "kupihse/alexander-service:latest"
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
