mongo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-db
spec:
  selector:
    matchLabels:
      app: mongo-db
  template:
    metadata:
      labels:
        app: mongo-db
    spec:
      containers:
      - name: mongo-db
        image: mongo:latest
        resources:
          limits:
            memory: "2048Mi"
            cpu: "500m"
        ports:
        - containerPort: 27017
